# tissue_exploder

./: LICENSE  README.md  pyproject.toml  tR_example.py  tissueRipper.py
imgs/: zfish_memGFP_2d_seg.tif
nbs/: examples.ipynb
src/: tissue_exploder.py
