[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tissue_exploder"
version = "0.0.1"
authors = [
  { name="Jonas Hartmann", email="jonas.m.hartmann@protonmail.com" },
]
description = "Create a nice 'exploded' visualization of segmented cells in a tissue. "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.21",
  "scikit-image>=0.19"
]
